Compiler Bouw/compiler/test/basic/stephen/fail/for_without_body.cvc
// For-loop needs two or three arguments.

#include "civic.h"

export int main() {
    for (int i = 0, 5);

    return 0;
}
